err/c2.app.shorturl.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/c2'...
Listing './lib/python3.5/site-packages/c2/app'...
Listing './lib/python3.5/site-packages/c2/app/shorturl'...
Listing './lib/python3.5/site-packages/c2/app/shorturl/browser'...
Listing './lib/python3.5/site-packages/c2/app/shorturl/content'...
Listing './lib/python3.5/site-packages/c2/app/shorturl/profiles'...
Listing './lib/python3.5/site-packages/c2/app/shorturl/profiles/default'...
Listing './lib/python3.5/site-packages/c2/app/shorturl/profiles/default/types'...
Listing './lib/python3.5/site-packages/c2/app/shorturl/tests'...
Compiling './lib/python3.5/site-packages/c2/app/shorturl/tests/test_add_content_types.py'...
***   File "./lib/python3.5/site-packages/c2/app/shorturl/tests/test_add_content_types.py", line 46
    print self.types.objectIds()
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/c2.app.shorturl-1.0b1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
